--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body {
-     background-color: black;
-     color: rgba(172, 4, 4, 0.812);
+     background-color: rgb(47, 47, 47);
+     color: rgba(198, 0, 0, 0.812);
 }
