--- a/style.css
+++ b/style.css
@@ -2,4 +2,5 @@ body {
      background-color: rgb(0, 0, 0);
      color: rgba(198, 0, 0, 0.812);
      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     align-items: center;
 }
