--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
      background-color: rgb(0, 0, 0);
      color: rgba(198, 0, 0, 0.812);
-     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     align-items: center;
+     font-family: cursive;
+    font-style: italic;
 }
