--- a/style.css
+++ b/style.css
@@ -4,4 +4,7 @@ body {
      font-family: cursive;
      font-style: italic;
      text-align: center;
+     border-width: 560;
+     border-radius: 315;
+     border-color: antiquewhite;
 }
