--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
      background-color: rgb(0, 0, 0);
      color: rgba(198, 0, 0, 0.812);
-     font-family: cursive;
+     font-family: 'Times New Roman', Times, serif;
      font-style: italic;
      text-align: center;
      border-width: 560;
