--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ body {
      font-family: 'Times New Roman', Times, serif;
      font-style: italic;
      text-align: center;
-     border-width: 560;
-     border-radius: 315;
-     border-color: antiquewhite;
+}
+
+header {
+    border-botton
+
+
 }
