--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
      background-color: rgb(0, 0, 0);
-     color: rgba(198, 0, 0, 0.812);
+     color: darkred;
      font-family: 'Times New Roman', Times, serif;
      font-style: italic;
      text-align: center;
 }
 
 header {
-    border-botton: solid 10px;
+    border-botton: solid 10px darkred;
 
 
 }
