--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body {
-     background-color: rgb(0, 0, 0);
-     color: darkred;
-     font-family: 'Times New Roman', Times, serif;
-     font-style: italic;
-     text-align: center;
+    background-color: rgb(0, 0, 0);
+    color: darkred;
+    font-family: href="https://kinsta.com/pt/blog/fontes-seguras-na-web/#3-bodoni-mt--bodoni-72"
+        text-align: center;
 }
 
 header {
