--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
     background-color: rgb(0, 0, 0);
     color: darkred;
-    font-family: href="https://kinsta.com/pt/blog/fontes-seguras-na-web/#3-bodoni-mt--bodoni-72"
-        text-align: center;
+    font-family: Bodoni MT, Bodoni 72;
 }
 
 header {
