--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(0, 0, 0);
     color: darkred;
     font-family: Bodoni MT, Bodoni 72;
+    text-align: center;
 }
 
 header {
