--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: rgb(0, 0, 0);
     color: darkred;
-    font-family: Bodoni MT, Bodoni 72;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 72;
     text-align: center;
 }
 
