--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ body {
     color: darkred;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 72;
     text-align: center;
+    margin: 0px;
 }
 
 header {
     border-bottom: solid 2px darkred;
+
 }
