--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ header {
     border-bottom: solid 2px rgb(86, 0, 0);
     padding: 20px;
     font-size:15px;
-    color-scheme: darkred;
-}
+   color: darkslategray;
+   }
