--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ header {
     border-bottom: solid 2px rgb(86, 0, 0);
     padding: 20px;
     font-size:20,5px;
-   color: darkslategray;
+   color: darkred;
    }
