--- a/style.css
+++ b/style.css
@@ -11,4 +11,11 @@ header {
     padding: 20px;
     font-size:20,5px;
    color: darkred;
+
+   }
+   
+section {
+  background-color: black;
+
+
    }
