--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
 }
 
 section {
-    background-color: white;
+    background-color: rgb(255, 0, 0);
     padding-top: 80px;
     padding-bottom: 80px;
 }
