--- a/style.css
+++ b/style.css
@@ -18,4 +18,5 @@ section {
     padding-bottom: 80px;
     display: flex;
     justify-content: center;
+    -ms-content-zoom-snap-type: inherit;
 }
