--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(0, 0, 0);
     color: darkred;
     margin: 0px;
+    text-align: center;
 }
 
 header {
@@ -14,8 +15,5 @@ header {
 
 section {
     background-color: rgb(0, 0, 0);
-    padding-top: 80px;
-    padding-bottom: 80px;
-    display: flex;
-    justify-content: center;
+
 }
