--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     background-color: rgb(0, 0, 0);
     color: darkred;
     margin: 0px;
-    text-align: center;
 }
 
 header {
@@ -15,5 +14,8 @@ header {
 
 section {
     background-color: rgb(0, 0, 0);
-
+    padding-top: 80px;
+    padding-bottom: 80px;
+    display: flex;
+    justify-content: center;
 }
