--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     background-color: rgb(0, 0, 0);
     color: darkred;
     margin: 0px;
+    font-family: "Rubik Wet Paint", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
 
 header {
