--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     font-family: "Rubik Wet Paint", system-ui;
     font-weight: 10;
     font-style: normal;
+    color: crimson;
 }
 
 header {
