--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: "Rubik Wet Paint", system-ui;
     font-weight: 10;
     font-style: normal;
-    color: crimson;
+    color: rgba(107, 0, 21, 0.277);
 }
 
 header {
